--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         <main>
             <section>
-                <h2>introductie </h2>
+                <h2>introductie test</h2>
                 <p>Welkom bij FloraFavorieten - jouw gezellige hoekje van het internet waar we samen in de betoverende wereld van planten duiken! Of je nu een enthousiaste tuinier bent of gewoon op zoek bent naar wat groene inspiratie, hier ben je aan het juiste adres.
                 <p>Laat je meevoeren door de kleurrijke verhalen van bladeren, ontdek handige tips voor het verzorgen van je groene vrienden, en deel in de vreugde van elke bloeiende verrassing. FloraFavorieten is meer dan een blog; het is een levendig gesprek over alles wat groeit en bloeit.</p>
                 <p>Dus, trek je groene duim uit de verpakking, zet je favoriete plant op de vensterbank, en laten we samen genieten van de eindeloze mogelijkheden van de plantenwereld. Hier begint een nieuw hoofdstuk vol groen geluk - welkom op FloraFavorieten! </p>                    
