buttons, font, height

--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
             <h1>FloraFavorieten</h1>
             <nav>   
                 <ul>    
-                    <li><a href="index.html" class="active">home</a></li>
+                    <li><a href="index.html">home</a></li>
                     <li><a href= "stekjes.html">stekjes</a></li>
-                    <li><a href= "about.html">mijn planten</a></li>
+                    <li><a href= "about.html" class="active">mijn planten</a></li>
                     <li><a href= "verzorging.html">verzorging</a></li>
                 </ul>
             </nav>
