--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <section>
-            <h2>introductie test</h2>
+            <h2>introductie</h2>
             <p>Welkom bij FloraFavorieten - jouw gezellige hoekje van het internet waar we samen in de betoverende
                 wereld van planten duiken! Of je nu een enthousiaste tuinier bent of gewoon op zoek bent naar wat groene
                 inspiratie, hier ben je aan het juiste adres.
@@ -61,10 +61,10 @@
             <article>
                 <div class="content">
                     <!--Dit komt van bron-->
-                    <h3> Verschilolende plantensoorten</h3>
+                    <h3> Verschillende plantensoorten</h3>
                     <p> Planten vormen een intrigerende wereld van diversiteit, waar elke soort een unieke rol speelt in
                         het complexe weefsel van het ecosysteem. Van de majestueuze sequoia's tot de bescheiden varens
-                        in het bos, elke plantensoort draagt bij aan de biodiversiteit van onze planeet.
+                        in het bos, elke plantensoort draagt bij aan de biodiversiteit van onze planeet.</p>
                         <ul>
                             <li>Bloeiende Schoonheden: Bloemenpracht komt in vele vormen en kleuren. Van de geurige rozen
                                 tot de exotische orchideeën, elke bloeiende plant vertelt een verhaal van vruchtbaarheid en
@@ -86,11 +86,11 @@
                                 niet alleen decoratief, maar filteren ook schadelijke stoffen uit de lucht, waardoor onze
                                 binnenomgeving gezonder wordt.</li>
                         </ul>
-                        Elke plantensoort draagt bij aan de biodiversiteit van onze planeet en biedt een unieke bijdrage
+                       <p>Elke plantensoort draagt bij aan de biodiversiteit van onze planeet en biedt een unieke bijdrage
                         aan het weefsel van het leven. Laten we deze diversiteit vieren en ons verwonderen over de
-                        schitterende verscheidenheid aan planten die onze wereld rijk is.
+                        schitterende verscheidenheid aan planten die onze wereld rijk is.</p>
 
-                    </p>
+        
                 </div>
                 <img src="images/article-image1.jpg" alt="logo van plant">
             </article>
