--- a/verzorging.html
+++ b/verzorging.html
@@ -14,7 +14,7 @@
                     <li><a href="index.html">home</a></li>
                     <li><a href= "stekjes.html">stekjes</a></li>
                     <li><a href= "about.html">mijn planten</a></li>
-                    <li><a href= "verzorging.html">verzorging</a></li>
+                    <li><a href= "verzorging.html" class="active">verzorging</a></li>
                 </ul>
             </nav>
 
