--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <section>
-            <h2>introductie</h2>
+            <h2>Introductie</h2>
             <p>Welkom bij FloraFavorieten - jouw gezellige hoekje van het internet waar we samen in de betoverende
                 wereld van planten duiken! Of je nu een enthousiaste tuinier bent of gewoon op zoek bent naar wat groene
                 inspiratie, hier ben je aan het juiste adres.
@@ -95,22 +95,25 @@
                 <img src="images/article-image1.jpg" alt="logo van plant">
             </article>
         </section>
-        <section>
-            <article>
-                <img src="images/plant3.jpg" alt="logo van plant">
-                <div class="content">
-                    <h3>Hoe verzorg je planten</h3>
-                    <p>dit is mijn favoriete site<a href="https://www.google.com"> google</a></p>
-                </div>
-            </article>
-        </section>
+    
         <section>
             <article>
                 <div class="content">
                     <!--Dit komt van bron-->
-                    <h3> vandaag leren we hoe te zorgen voor je planten</h3>
-                    <p> geef ze niet te veel water</p>
-                    <a class="button" href="#"> klik mij</a>
+                    <h3>Planten feitjes</h3>
+                    <ol>
+                    <li><b>Communicatie via Geuren:</b> Planten kunnen met elkaar communiceren via geuren. Wanneer een plant wordt aangevallen door insecten, kan het geurstoffen verspreiden om naburige planten te waarschuwen, zodat ze hun afweermechanismen kunnen activeren.</li>
+                    <li><b>Slaapbewegingen:</b> Sommige planten vertonen slaapbewegingen, vergelijkbaar met hoe dieren dat doen. Bladeren van bepaalde planten, zoals klaver en mimosa, kunnen 's nachts samenvouwen en overdag weer openen.</li>
+                    <li><b>Zonnekompas:</b> Zonnebloemen volgen de zon gedurende de dag in een proces dat bekend staat als heliotropisme. 's Ochtends kijken ze naar het oosten en draaien ze gedurende de dag met de zon mee naar het westen.</li>
+                    <li><b>Luchtzuiverende Kracht:</b> Verschillende planten, waaronder de populaire Vredeslelie en Spinplant, staan bekend om hun vermogen om de lucht te zuiveren door schadelijke stoffen te absorberen.</li>
+                    <li><b>Oudste Plant op Aarde:</b> Wellicht de oudste plant ter wereld is de Pando, een bos van tremble populieren in Utah, VS. Hoewel individuele bomen relatief kort leven, is Pando al meer dan 80.000 jaar oud en deelt het een genetisch identieke wortelstructuur.</li>
+                    <li><b>Snelste Groeier:</b> Bamboe is een van de snelstgroeiende planten ter wereld. Sommige bamboesoorten kunnen tot 91 cm per dag groeien.</li>
+                    <li><b>Electrische Signalen:</b> Planten kunnen elektrische signalen gebruiken om met elkaar te communiceren en zichzelf te verdedigen tegen aanvallen. Dit proces, bekend als 'plantelektriciteit', helpt hen snel te reageren op bedreigingen.</li>
+                    <li><b>Gigantische Bloemen:</b> De Rafflesia arnoldii, afkomstig uit Zuidoost-Azië, heeft de grootste bloem ter wereld. Het kan een diameter van meer dan een meter bereiken en heeft een onaangename geur om vliegen aan te trekken voor bestuiving.</li>
+                    <li>Eetbare Bloemen: Veel bloemen zijn eetbaar en worden gebruikt in culinaire gerechten. Voorbeelden zijn viooltjes, rozenblaadjes en calendula.</li>
+                    <li>Zelfbevruchting: Sommige planten zijn in staat tot zelfbestuiving, waarbij ze hun eigen pollen gebruiken om zichzelf te bevruchten. Dit helpt bij de voortplanting, zelfs als er geen andere planten in de buurt zijn.</li>
+                    </ol>
+                    <p>Planten zijn echt fascinerende wezens met verbazingwekkende eigenschappen en aanpassingsvermogen.</p>
                 </div>
                 <img src="images/plant1.jpg" alt="logo van plant">
             </article>
