--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html" class="active">home</a></li>
                 <li><a href="stekjes.html">stekjes</a></li>
-                <li><a href="about.html">mijn planten</a></li>
+                <li><a href="favoriet.html">mijn favoriete planten</a></li>
                 <li><a href="verzorging.html">verzorging</a></li>
             </ul>
         </nav>
@@ -121,19 +121,16 @@
         <section>
             <div class="blockrow">
                 <div class="myblock">
-                    <h3> vandaag leren we hoe te zorgen voor je planten</h3>
-                    <p> geef ze niet te veel water</p>
+                    <h3>Hier meer over <a href= "verzorging.html" title="verzorging">verzorging</a></h3>
                 </div>
                 <div class="myblock">
                     <picture>
                         <img src="images/plant3.jpg" alt="foto van een plant op kleed in rieten mand">
                     </picture>
-                    <h3> vandaag leren we hoe te zorgen voor je planten</h3>
-                    <p> geef ze niet te veel water</p>
+                    <h3>Hier meer over <a href= "favoriet.html" title="favoriete planten">mijn favoriete planten</a></h3>
                 </div>
                 <div class="myblock">
-                    <h3> vandaag leren we hoe te zorgen voor je planten</h3>
-                    <p> geef ze niet te veel water</p>
+                    <h3>Hier meer over <a href= "stekjes.html" title="stekjes">stekjes</a></h3>
                 </div>
             </div>
         </section>
@@ -150,7 +147,7 @@
                 <ul>
                     <li><a href="index.html">home</a></li>
                     <li><a href="stekjes.html">stekjes</a></li>
-                    <li><a href="about.html">mijn planten</a></li>
+                    <li><a href="favoriet.html">mijn favoriete planten</a></li>
                     <li><a href="verzorging.html">verzorging</a></li>
                 </ul>
             </nav>
