--- a/verzorging.html
+++ b/verzorging.html
@@ -13,7 +13,7 @@
                 <ul>    
                     <li><a href="index.html">home</a></li>
                     <li><a href= "stekjes.html">stekjes</a></li>
-                    <li><a href= "about.html">mijn planten</a></li>
+                    <li><a href= "favoriet.html">mijn favoriete planten</a></li>
                     <li><a href= "verzorging.html" class="active">verzorging</a></li>
                 </ul>
             </nav>
@@ -140,7 +140,7 @@
                     <ul>    
                         <li><a href="index.html">home</a></li>
                         <li><a href= "stekjes.html">stekjes</a></li>
-                        <li><a href= "about.html">mijn planten</a></li>
+                        <li><a href= "favoriet.html">mijn favorieten planten</a></li>
                         <li><a href= "verzorging.html">verzorging</a></li>
                     </ul>
                 </nav>
