last page, sections articles

--- a/about.html
+++ b/about.html
@@ -29,7 +29,9 @@
             </section>
             <section>
                 <article>
+                    <picture>
                     <img src="images/plant2.jpg" alt="logo van plant">
+                    </picture>
                     <div class="content">
                         <h3>Hoe zorg je voor je planten?</h3>
                         <ol>
@@ -66,12 +68,16 @@
                             
                             Elke plantensoort draagt bij aan de biodiversiteit van onze planeet en biedt een unieke bijdrage aan het weefsel van het leven. Laten we deze diversiteit vieren en ons verwonderen over de schitterende verscheidenheid aan planten die onze wereld rijk is.</li></ul></p>
                     </div>
+                    <picture>
                     <img src="images/article-image1.jpg" alt="logo van plant">
+                    </picture>
                 </article>
             </section>
             <section>
                 <article>
+                    <picture>
                     <img src="images/plant3.jpg" alt="logo van plant">
+                    </picture>
                     <div class="content">
                         <h3>Hoe verzorg je planten</h3>
                         <p>dit is mijn favoriete site<a href="https://www.google.com"> google</a></p>
@@ -85,8 +91,10 @@
                         <h3> vandaag leren we hoe te zorgen voor je planten</h3>
                         <p> geef ze niet te veel water</p>
                         <a class="button" href="#"> klik mij</a>
-                    </div>                           
+                    </div>             
+                    <picture>              
                     <img src="images/plant1.jpg" alt="logo van plant">
+                    </picture>
                 </article>
             </section>
             <section>
