--- a/index.html
+++ b/index.html
@@ -34,103 +34,120 @@
                 genieten van de eindeloze mogelijkheden van de plantenwereld. Hier begint een nieuw hoofdstuk vol groen
                 geluk - welkom op FloraFavorieten! </p>
         </section>
-        <section>
-            <article>
+        <article>
+            <picture>
                 <img src="images/plant2.jpg" alt="logo van plant">
-                <div class="content">
-                    <h3>Hoe zorg je voor je planten?</h3>
-                    <p> Hier zijn enkele eenvoudige tips om jouw planten te laten stralen:</p>
-                    <ol>
-                        <li>Lichtliefhebbers: <p>Plaats zonminnende planten bij het raam voor een dosis zonneschijn.
-                                Schaduwminnaars voelen zich thuis op een iets donkerdere plek.</p>
-                        </li>
-                        <li>Waterwijsheid: Houd de grond vochtig maar vermijd verzadiging. Gebruik de vingertest: als de
-                            bovenste laag droog aanvoelt, is het tijd om water te geven.</li>
-                        <li>Frisse lucht: Zorg voor luchtcirculatie om schimmel te voorkomen. Een zacht briesje van een
-                            open raam of een ventilator doet wonderen.</li>
-                        <li>Voedingsboost: Verwen je planten met milde meststoffen tijdens het groeiseizoen. Volg de
-                            aanwijzingen op de verpakking.</li>
-                        <li>Bladverzorging: Houd bladeren schoon door ze af en toe voorzichtig af te vegen met een
-                            vochtige doek. Dit bevordert een gezonde ademhaling.</li>
-                    </ol>
-                    <p> Hier meer over <a href="verzorging.html">verzorging</a></p>
-                </div>
-            </article>
-        </section>
-        <section>
-            <article>
-                <div class="content">
-                    <!--Dit komt van bron-->
-                    <h3> Verschillende plantensoorten</h3>
-                    <p> Planten vormen een intrigerende wereld van diversiteit, waar elke soort een unieke rol speelt in
-                        het complexe weefsel van het ecosysteem. Van de majestueuze sequoia's tot de bescheiden varens
-                        in het bos, elke plantensoort draagt bij aan de biodiversiteit van onze planeet.</p>
-                        <ul>
-                            <li>Bloeiende Schoonheden: Bloemenpracht komt in vele vormen en kleuren. Van de geurige rozen
-                                tot de exotische orchideeën, elke bloeiende plant vertelt een verhaal van vruchtbaarheid en
-                                overvloed.</li>
+            </picture>
+            <div class="content">
+                <h3>Hoe zorg je voor je planten?</h3>
+                <p> Hier zijn enkele eenvoudige tips om jouw planten te laten stralen:</p>
+                <ol>
+                    <li>Lichtliefhebbers: <p>Plaats zonminnende planten bij het raam voor een dosis zonneschijn.
+                            Schaduwminnaars voelen zich thuis op een iets donkerdere plek.</p>
+                    </li>
+                    <li>Waterwijsheid: Houd de grond vochtig maar vermijd verzadiging. Gebruik de vingertest: als de
+                        bovenste laag droog aanvoelt, is het tijd om water te geven.</li>
+                    <li>Frisse lucht: Zorg voor luchtcirculatie om schimmel te voorkomen. Een zacht briesje van een
+                        open raam of een ventilator doet wonderen.</li>
+                    <li>Voedingsboost: Verwen je planten met milde meststoffen tijdens het groeiseizoen. Volg de
+                        aanwijzingen op de verpakking.</li>
+                    <li>Bladverzorging: Houd bladeren schoon door ze af en toe voorzichtig af te vegen met een
+                        vochtige doek. Dit bevordert een gezonde ademhaling.</li>
+                </ol>
+                <p> Hier meer over <a href="verzorging.html">verzorging</a></p>
+            </div>
+        </article>
+        <article>
+            <div class="content">
+                <!--Dit komt van bron-->
+                <h3> Verschillende plantensoorten</h3>
+                <p> Planten vormen een intrigerende wereld van diversiteit, waar elke soort een unieke rol speelt in
+                    het complexe weefsel van het ecosysteem. Van de majestueuze sequoia's tot de bescheiden varens
+                    in het bos, elke plantensoort draagt bij aan de biodiversiteit van onze planeet.</p>
+                <ul>
+                    <li>Bloeiende Schoonheden: Bloemenpracht komt in vele vormen en kleuren. Van de geurige rozen
+                        tot de exotische orchideeën, elke bloeiende plant vertelt een verhaal van vruchtbaarheid en
+                        overvloed.</li>
 
-                            <li>Bladrijke Architecten: Bladeren zijn de zonnecollectoren van de natuur. Groot, klein,
-                                geribbeld of glanzend - elk blad is aangepast aan zijn omgeving, waardoor planten het
-                                zonlicht efficiënt omzetten in energie.</li>
+                    <li>Bladrijke Architecten: Bladeren zijn de zonnecollectoren van de natuur. Groot, klein,
+                        geribbeld of glanzend - elk blad is aangepast aan zijn omgeving, waardoor planten het
+                        zonlicht efficiënt omzetten in energie.</li>
 
-                            <li>Woestijn Overlevers: Cactussen en succulenten zijn meesterlijke overlevingskunstenaars in
-                                droge omgevingen. Hun vermogen om water op te slaan in vlezige bladeren maakt hen tot de
-                                helden van de hitte.</li>
+                    <li>Woestijn Overlevers: Cactussen en succulenten zijn meesterlijke overlevingskunstenaars in
+                        droge omgevingen. Hun vermogen om water op te slaan in vlezige bladeren maakt hen tot de
+                        helden van de hitte.</li>
 
-                            <li>Klimmende Avonturiers: Klimplanten, zoals de wijnstokken en klimop, omarmen verticale
-                                ruimtes. Ze voegen niet alleen een esthetisch element toe, maar bieden ook schaduw en
-                                bescherming aan andere flora en fauna.</li>
+                    <li>Klimmende Avonturiers: Klimplanten, zoals de wijnstokken en klimop, omarmen verticale
+                        ruimtes. Ze voegen niet alleen een esthetisch element toe, maar bieden ook schaduw en
+                        bescherming aan andere flora en fauna.</li>
 
-                            <li>Luchtzuiverende Helden: Luchtzuiverende planten, zoals de vredeslelie en spinplant, zijn
-                                niet alleen decoratief, maar filteren ook schadelijke stoffen uit de lucht, waardoor onze
-                                binnenomgeving gezonder wordt.</li>
-                        </ul>
-                       <p>Elke plantensoort draagt bij aan de biodiversiteit van onze planeet en biedt een unieke bijdrage
-                        aan het weefsel van het leven. Laten we deze diversiteit vieren en ons verwonderen over de
-                        schitterende verscheidenheid aan planten die onze wereld rijk is.</p>
+                    <li>Luchtzuiverende Helden: Luchtzuiverende planten, zoals de vredeslelie en spinplant, zijn
+                        niet alleen decoratief, maar filteren ook schadelijke stoffen uit de lucht, waardoor onze
+                        binnenomgeving gezonder wordt.</li>
+                </ul>
+                <p>Elke plantensoort draagt bij aan de biodiversiteit van onze planeet en biedt een unieke bijdrage
+                    aan het weefsel van het leven. Laten we deze diversiteit vieren en ons verwonderen over de
+                    schitterende verscheidenheid aan planten die onze wereld rijk is.</p>
 
-        
-                </div>
+
+            </div>
+            <picture>
                 <img src="images/article-image1.jpg" alt="logo van plant">
-            </article>
-        </section>
-    
-        <section>
-            <article>
-                <div class="content">
-                    <!--Dit komt van bron-->
-                    <h3>Planten feitjes</h3>
-                    <ol>
-                    <li><b>Communicatie via Geuren:</b> Planten kunnen met elkaar communiceren via geuren. Wanneer een plant wordt aangevallen door insecten, kan het geurstoffen verspreiden om naburige planten te waarschuwen, zodat ze hun afweermechanismen kunnen activeren.</li>
-                    <li><b>Slaapbewegingen:</b> Sommige planten vertonen slaapbewegingen, vergelijkbaar met hoe dieren dat doen. Bladeren van bepaalde planten, zoals klaver en mimosa, kunnen 's nachts samenvouwen en overdag weer openen.</li>
-                    <li><b>Zonnekompas:</b> Zonnebloemen volgen de zon gedurende de dag in een proces dat bekend staat als heliotropisme. 's Ochtends kijken ze naar het oosten en draaien ze gedurende de dag met de zon mee naar het westen.</li>
-                    <li><b>Luchtzuiverende Kracht:</b> Verschillende planten, waaronder de populaire Vredeslelie en Spinplant, staan bekend om hun vermogen om de lucht te zuiveren door schadelijke stoffen te absorberen.</li>
-                    <li><b>Oudste Plant op Aarde:</b> Wellicht de oudste plant ter wereld is de Pando, een bos van tremble populieren in Utah, VS. Hoewel individuele bomen relatief kort leven, is Pando al meer dan 80.000 jaar oud en deelt het een genetisch identieke wortelstructuur.</li>
-                    <li><b>Snelste Groeier:</b> Bamboe is een van de snelstgroeiende planten ter wereld. Sommige bamboesoorten kunnen tot 91 cm per dag groeien.</li>
-                    <li><b>Electrische Signalen:</b> Planten kunnen elektrische signalen gebruiken om met elkaar te communiceren en zichzelf te verdedigen tegen aanvallen. Dit proces, bekend als 'plantelektriciteit', helpt hen snel te reageren op bedreigingen.</li>
-                    <li><b>Gigantische Bloemen:</b> De Rafflesia arnoldii, afkomstig uit Zuidoost-Azië, heeft de grootste bloem ter wereld. Het kan een diameter van meer dan een meter bereiken en heeft een onaangename geur om vliegen aan te trekken voor bestuiving.</li>
-                    <li>Eetbare Bloemen: Veel bloemen zijn eetbaar en worden gebruikt in culinaire gerechten. Voorbeelden zijn viooltjes, rozenblaadjes en calendula.</li>
-                    <li>Zelfbevruchting: Sommige planten zijn in staat tot zelfbestuiving, waarbij ze hun eigen pollen gebruiken om zichzelf te bevruchten. Dit helpt bij de voortplanting, zelfs als er geen andere planten in de buurt zijn.</li>
-                    </ol>
-                    <p>Planten zijn echt fascinerende wezens met verbazingwekkende eigenschappen en aanpassingsvermogen.</p>
-                </div>
+            </picture>
+        </article>
+        <article>
+            <div class="content">
+                <!--Dit komt van bron-->
+                <h3>Planten feitjes</h3>
+                <ol>
+                    <li><b>Communicatie via Geuren:</b> Planten kunnen met elkaar communiceren via geuren. Wanneer een
+                        plant wordt aangevallen door insecten, kan het geurstoffen verspreiden om naburige planten te
+                        waarschuwen, zodat ze hun afweermechanismen kunnen activeren.</li>
+                    <li><b>Slaapbewegingen:</b> Sommige planten vertonen slaapbewegingen, vergelijkbaar met hoe dieren
+                        dat doen. Bladeren van bepaalde planten, zoals klaver en mimosa, kunnen 's nachts samenvouwen en
+                        overdag weer openen.</li>
+                    <li><b>Zonnekompas:</b> Zonnebloemen volgen de zon gedurende de dag in een proces dat bekend staat
+                        als heliotropisme. 's Ochtends kijken ze naar het oosten en draaien ze gedurende de dag met de
+                        zon mee naar het westen.</li>
+                    <li><b>Luchtzuiverende Kracht:</b> Verschillende planten, waaronder de populaire Vredeslelie en
+                        Spinplant, staan bekend om hun vermogen om de lucht te zuiveren door schadelijke stoffen te
+                        absorberen.</li>
+                    <li><b>Oudste Plant op Aarde:</b> Wellicht de oudste plant ter wereld is de Pando, een bos van
+                        tremble populieren in Utah, VS. Hoewel individuele bomen relatief kort leven, is Pando al meer
+                        dan 80.000 jaar oud en deelt het een genetisch identieke wortelstructuur.</li>
+                    <li><b>Snelste Groeier:</b> Bamboe is een van de snelstgroeiende planten ter wereld. Sommige
+                        bamboesoorten kunnen tot 91 cm per dag groeien.</li>
+                    <li><b>Electrische Signalen:</b> Planten kunnen elektrische signalen gebruiken om met elkaar te
+                        communiceren en zichzelf te verdedigen tegen aanvallen. Dit proces, bekend als
+                        'plantelektriciteit', helpt hen snel te reageren op bedreigingen.</li>
+                    <li><b>Gigantische Bloemen:</b> De Rafflesia arnoldii, afkomstig uit Zuidoost-Azië, heeft de
+                        grootste bloem ter wereld. Het kan een diameter van meer dan een meter bereiken en heeft een
+                        onaangename geur om vliegen aan te trekken voor bestuiving.</li>
+                    <li>Eetbare Bloemen: Veel bloemen zijn eetbaar en worden gebruikt in culinaire gerechten.
+                        Voorbeelden zijn viooltjes, rozenblaadjes en calendula.</li>
+                    <li>Zelfbevruchting: Sommige planten zijn in staat tot zelfbestuiving, waarbij ze hun eigen pollen
+                        gebruiken om zichzelf te bevruchten. Dit helpt bij de voortplanting, zelfs als er geen andere
+                        planten in de buurt zijn.</li>
+                </ol>
+                <p>Planten zijn echt fascinerende wezens met verbazingwekkende eigenschappen en aanpassingsvermogen.</p>
+            </div>
+            <picture>
                 <img src="images/plant1.jpg" alt="logo van plant">
-            </article>
-        </section>
+            </picture>
+        </article>
         <section>
             <div class="blockrow">
                 <div class="myblock">
-                    <h3>Hier meer over <a href= "verzorging.html" title="verzorging">verzorging</a></h3>
+                    <h3>Hier meer over <a href="verzorging.html" title="verzorging">verzorging</a></h3>
                 </div>
                 <div class="myblock">
                     <picture>
                         <img src="images/plant3.jpg" alt="foto van een plant op kleed in rieten mand">
                     </picture>
-                    <h3>Hier meer over <a href= "favoriet.html" title="favoriete planten">mijn favoriete planten</a></h3>
+                    <h3>Hier meer over <a href="favoriet.html" title="favoriete planten">mijn favoriete planten</a></h3>
                 </div>
                 <div class="myblock">
-                    <h3>Hier meer over <a href= "stekjes.html" title="stekjes">stekjes</a></h3>
+                    <h3>Hier meer over <a href="stekjes.html" title="stekjes">stekjes</a></h3>
                 </div>
             </div>
         </section>
