--- a/favoriet.html
+++ b/favoriet.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/style.css" rel="stylesheet">
     <title> FloraFavorieten</title>
+    <!--Ik heb ook een favicon-->
 </head>
 
 <body>
@@ -30,7 +31,7 @@
         </section>
         <article>
             <picture>
-                <img src="images/venus.jpg" alt="logo van plant">
+                <img src="images/venus.jpg" alt="vliegenvanger plant">
             </picture>
             <div class="content">
                 <h3>Venus vliegenvanger</h3>
@@ -44,7 +45,6 @@
         </article>
         <article>
             <div class="content">
-                <!--Dit komt van bron-->
                 <h3>Rozenstruik</h3>
                 <p> 
                     De rozenstruik (Rosa spp.) is niet alleen een symbool van liefde en romantiek, maar ook een meesterwerk in elke tuin. Met haar zachte, weelderige bloemblaadjes in verschillende tinten, betovert de rozenstruik de zintuigen en voegt een vleugje elegantie toe aan elke buitenruimte.
