--- a/stekjes.html
+++ b/stekjes.html
@@ -62,11 +62,12 @@
         </article>
         <article>
             <div class="content">
-                <!--Dit komt van bron-->
                 <h3>Het Eindresultaat: Een Groene Familie</h3>
                 <p>Na geduldig wachten en liefdevolle zorg, zul je getuige zijn van de prachtige transformatie van je
-                    stekjes tot volwassen planten. Elke nieuwe loot vertelt een verhaal van verbondenheid, groei en de
-                    voortzetting van groen geluk. Zo worden stekjes niet alleen de belichaming van nieuw leven, maar ook
+                    stekjes tot volwassen planten.</p>
+                <p>Elke nieuwe loot vertelt een verhaal van verbondenheid, groei en de
+                    voortzetting van groen geluk. </p>
+                <p>Zo worden stekjes niet alleen de belichaming van nieuw leven, maar ook
                     de dragers van herinneringen en groene erfgoed.</p>
             </div>
             <picture>
