--- a/verzorging.html
+++ b/verzorging.html
@@ -96,7 +96,7 @@
                 </p>
             </div>
             <picture>
-                <img src="images/schoon.jpg" alt="logo van plant">
+                <img src="images/schoon.jpg" alt="bladeren die schoongemaakt worden">
             </picture>
         </article>
     </main>
